[project]
name = "dvrp"
version = "0.1.0"
description = "A project for solving Robust Vehicle Routing and Traveling Salesperson Problems."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "tensorboard",
    "gurobipy",
    "elkai>=2.0.1",
    "pytz>=2025.2",
]
